Fix footer social icon spacing

--- a/wp-content/themes/twinspirits/sass/base/_footer.scss
+++ b/wp-content/themes/twinspirits/sass/base/_footer.scss
@@ -100,7 +100,7 @@ footer.site-footer {
         background: none;
         border: 1px solid #ffffff;
       }
-			margin: 0 2em 0.4375em 0;
+			margin: 0 1em 0.4375em;
     }
     li a {
       border: 0;
