--- a/wp-content/themes/twinspirits/style.css
+++ b/wp-content/themes/twinspirits/style.css
@@ -334,7 +334,7 @@ footer.site-footer .social-navigation li {
   border-radius: 50%;
   background: #d14f53;
   border: 1px solid #d14f53;
-  margin: 0 2em 0.4375em 0;
+  margin: 0 1em 0.4375em;
 }
 
 footer.site-footer .social-navigation li:hover,
